테스트 리팩토링: "UTF-8" -> StandardCharset.UTF-8